[project]
name = "async-rate-gate"
version = "0.0.2"
description = ""
authors = [
    {name = "Adam",email = "adam.pwk@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
